--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,15 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-html {
-    scroll-behavior: smooth;
+* {
+  font-family: "Outfit", sans-serif;
 }
 
-.active hr{
-    @apply block
+.active hr {
+  @apply block;
 }
 
 ::-webkit-scrollbar {
-    @apply hidden
+  @apply hidden;
 }
